syntax = "proto3";

package grudpb;

option go_package="github.com/NeverlandMJ/GRUD/api-gateway/protos/grudpb";

service GrudService {
    rpc GetPostsByUserID (GetUserPostsRequest) returns (GetUserPostsResponse);
    rpc GetPostByID (GetPostByIDRequest) returns (Data);
}

message GetUserPostsRequest {
  int32 user_id = 1;
}

message Data {
  int32 id = 1;
  int32 user_id = 2;
  string title = 3;
  string body = 4;
}

message GetUserPostsResponse {
  repeated Data datas = 1;
}

message GetPostByIDRequest {
  int32 post_id = 1;
}

